fix notifications z-index

--- a/client/src/scss/main.scss
+++ b/client/src/scss/main.scss
@@ -675,6 +675,7 @@ button {
 
 .notifications {
   position: fixed;
+  z-index: 1;
   width: 100%;
   box-shadow: 0 0 3px rgba(0, 0, 0, 0.8);
   font-size: 1rem;
